mergin login branch and chenge server ips

--- a/Profile/templates/Profile/logout.html
+++ b/Profile/templates/Profile/logout.html
@@ -54,7 +54,7 @@
     <div class="logout-container">
         <h1>Logout Successful</h1>
         <p>You have been successfully logged out.</p>
-        <a href="http://localhost:3000/">Return to Homepage</a>
+        <a href="http://143.244.132.118">Return to Homepage</a>
     </div>
 </body>
 </html>
